test(controller): 컨트롤러 계층 WebMvcTest 단위 테스트 추가
API 엔드포인트의 정상 동작 검증을 위해 웹 계층 슬라이스 테스트를 작성함.
- MqttBrokerControllerTest: MQTT 브로커 등록 및 삭제 API 검증 테스트 작성
- SensorControllerTest: 센서 토폴로지, 메트릭 타입, 카탈로그 배치 조회 API 테스트 작성
- MockMvc 및 @MockitoBean을 활용하여 HTTP 상태 코드 및 JSON 응답 구조 검증\